<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modelFiles.Fragment_Score_Board">


        <Button
            android:id="@+id/retryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/btn_background"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/retry_btn"
            android:textAllCaps="false"
            android:textSize="@dimen/big_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/next_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_background"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/next_level"
            android:textAllCaps="false"
            android:textSize="@dimen/big_font_size"
            app:layout_constraintBottom_toTopOf="@+id/retryBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/remark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="8dp"
            android:text="Remark"
            android:textAlignment="center"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/big_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/points" />

        <TextView
            android:id="@+id/score_plate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/score_plate"
            android:textAlignment="center"
            android:textSize="@dimen/big_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="Points"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/about_game_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_plate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>